unpackaged/main/default/objects/tspa__VRAPermissionCheck__mdt/tspa__VRAPermissionCheck__mdt.object-meta.xml
<CustomObject>
    <label>VRAPermissionCheck</label>
    <pluralLabel>VRAPermissionChecks</pluralLabel>
</CustomObject>