unpackaged/main/default/objects/tspa__VRAPermissionCheck__mdt/fields/tspa__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>