unpackaged/main/default/objects/tspa__VRAPermissionCheck__mdt/fields/tspa__Required_Access__c.field-meta.xml
<CustomField>
    <fullName>tspa__Required_Access__c</fullName>
    <label>Required Access</label>
    <length>200</length>
    <type>Text</type>
</CustomField>